  Added View->Reset Layout menu item
  Added F11 shortcut key to View->Full Screen
  Improved RDP error reporting
  Added support for Credential Security Support Provider (CredSSP) which is required for Network Level Authentication (NLA)
  Added support for connecting through Remote Desktop Gateway servers
  Popups can now be allowed in Internet Explorer by holding Ctrl+Alt when clicking a link

1.62:
  Switched to VncSharp, an open source VNC component
  VNC is supported again except for the following features:
    Windows authentication
    Setting the compression, encoding and color settings
    Connecting through a proxy server
    Free SmartSize mode (it does the same thing as Aspect SmartSize mode now)
  Rearranged the Options page and added an Updates tab
  Added option to change how often updates are checked
  Open Updates options tab before connecting for the first time
  No longer show About page on first run
  Renamed Quicky toolbar to Quick Connect toolbar
  Changed back to allowing toolbars to dock to the left or right of the menu bar and added gripper to move it around
  Added RDP, VNC and ICA version numbers to Components Check page
  Fixed a bug with the inheritance buttons on the Config panel disappearing after awhile

1.61:
  Removed unlicensed SmartCode Solutions ViewerX VNC Viewer ActiveX
  This version of mRemoteNG does not support VNC

1.60:
  Changed name to mRemoteNG
  Fixed menu bar not staying docked to left side
  Removed snakes game Easter egg
  Removed references to visionapp Remote Desktop
  Changed filename delimiter in title bar from pipe to dash
  Changed default format for saving screenshot images to PNG
  Changed website addresses
  Added Report a Bug and Support Forum links to the Help menu
  Moved Check for Updates to the Help menu
  Changed website links in Help menu and About page to load within mRemoteNG instead of launching an external browser

1.50:
  Added the following formats to the "Save Connections As" function: